#
# This file is processed by automake (produces file Makefile.in)
#
bin_PROGRAMS = convierte.exe TOMS.exe ESRI.exe
convierte_exe_SOURCES = lee_satelite.F90 
TOMS_exe_SOURCES = lee_NO2_TOMS.f90
ESRI_exe_SOURCES = lee_NO2_ESRI.f90

# Additional files or directories to be distributed
EXTRA_DIST  = satelite.nml doc 
# Additional files to be cleaned with 'make clean'
CLEANFILES = *.o *.mod *~
